add: DTO에 tableNumber 필드 추가